--- a/www/source/scss/components/_headSoutien.scss
+++ b/www/source/scss/components/_headSoutien.scss
@@ -28,6 +28,10 @@
      text-transform: uppercase;
      padding: 0.8em 0;
    }
+   &__info{
+     font-size:0.5em;
+     padding: 1em 0;
+   }
    &__label{
      letter-spacing: 0.6px;
      font-size: 0.58333em;
