--- a/www/views/soutenir.pug
+++ b/www/views/soutenir.pug
@@ -7,7 +7,7 @@ html(lang="fr")
         meta(charset="utf-8")
         meta(name="description", content="Espace P… | Association pour la défense des droits des personnes prostituées")
         meta(name="viewport",content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-        title= "EspaceP... - Soutenir"
+        title= "EspaceP... - Soutenir notre action"
         link(rel='stylesheet', href='css/main.css', type='text/css')
     include template/header.pug
 
@@ -16,10 +16,11 @@ html(lang="fr")
 
           section.headSoutien
             h2.headSoutien__title="Nous soutenir"
-            p.headSoutien__subtitle="Vous pouvez vous abboné à notre magazine mensuel pour 5€ par mois sans engagement en fesant un virement banquaire au numéro de compte ci-joint."
+            p.headSoutien__subtitle="Vous pouvez vous abboné à notre magazine mensuel pour 20€ par mois sans engagement en fesant un virement banquaire au numéro de compte ci-joint. Notre magazine offre de nombreuse opportunité comme le fait de découvrir des histoires de vie de certaines travailleuse, travailleurs du sexe."
             div.headSoutien__cards
               span.headSoutien__label="Numéro de compte"
               p.headSoutien__compte="BE 1863 2383 3736 4683"
+              p.headSoutien__info="Inscrivez vos données en communication"
 
           section.explain
             h2.hidden="Information"
