--- a/www/views/template/_footer.pug
+++ b/www/views/template/_footer.pug
@@ -112,5 +112,5 @@ footer.footer
             ="Maison Médicale «Porte Sud», 88 rue de Bastogne à Arlon."
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js")
-script.hello(src="script/sticky.js")
+script(src="script/sticky.js")
 script(src="script/script.js")
