--- a/www/views/template/_navigation.pug
+++ b/www/views/template/_navigation.pug
@@ -5,6 +5,7 @@ section.navigation#menu
     div.navigation__container--left
       article.profil.profil--tds
         h3.profil__title="Travailleur du sexe"
+          a.profil__english(href="#english")="I'm a sex Worker"
         div.profil__box
           ul.profil__list
             li.profil__element.profil__element--tds
