--- a/wordpress/wp-content/themes/espaceP/css/main.css
+++ b/wordpress/wp-content/themes/espaceP/css/main.css
@@ -112,7 +112,7 @@ body {
  * coded by Dylan Schirino
  * started at 03/10/2016
  */
-.none,.comment-reply-title {
+.none,.comment-reply-title,.screen-reader-response,.wpcf7-validation-errors {
   display: none;
   position: absolute; }
 .comment-notes{
@@ -998,7 +998,7 @@ body {
 .askforus__form {
   width: 100%; }
 
-.askforus fieldset::after {
+.askforus__form::after {
   content: "";
   display: block;
   clear: both; }
@@ -1006,7 +1006,15 @@ body {
 .askforus__input {
   width: 100%;
   height: 3em;
-  margin-bottom: 2em; }
+  margin-bottom:0.5em;}
+  .wpcf7-form-control-wrap{
+    margin-bottom: 2em;
+    display: block;
+  }
+  .wpcf7-not-valid-tip{
+    font: 1.2em/1.233em "source_sans_prolight";
+    color: red;
+  }
   .askforus__input--textarea {
     height: 20em; }
 
