--- a/wordpress/wp-content/themes/espaceP/css/main.css
+++ b/wordpress/wp-content/themes/espaceP/css/main.css
@@ -148,6 +148,35 @@ body {
   -webkit-appearance: none;
   -webkit-border-radius:0px;
   width: 8em; }
+.search{
+  width: 80%;
+  margin: 6em auto;
+}
+.search__title{
+  font: 3.2em/1.333em "playfair_display";
+  padding:0.5em 0;
+}
+.search__subtitle{
+  font: 2.4em/1.3333em "source_sans_prolight","Helvetica Neue";
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+.search__element{
+  font:1.8em/1.3333em "source_sans_prolight","Helvetica Neue";
+  padding-bottom:1em;
+}
+.search__link:hover{
+  text-decoration: underline;
+}
+.search__element::before{
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background-color: black;
+  margin-right: 1em;
+}
 
 .search__submit {
   position: absolute;
